--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -8,10 +8,13 @@
     /* position: fixed; */
 width: 100%;
 justify-content: space-evenly;
-border:1px solid red;
+/* border:1px solid red; */
     @media screen and(max-width:768px){
         gap:15px;
         flex-direction: column;
+
+
+      
     }
     @media screen and (max-width:350px){
         font-size: 30px;
@@ -22,6 +25,18 @@ border:1px solid red;
         gap: 0;
 
     }
+
+    @media screen and (max-width:400px){
+        font-size: 30px;
+        height: auto;
+        /* text-align: center; */
+        display: flex;
+        flex-direction:column;
+        /* height: 50vh; */
+        gap: 0px;
+        padding-top: 5%;
+
+    }
 }
 .footer2{
     display: flex;
@@ -29,7 +44,8 @@ border:1px solid red;
     font-size: 30px;
     @media screen and (max-width:768px){
         font-size:15px;
-       margin-bottom: 15%;    
+       margin-bottom: 15%;  
+      
 
         
     }
@@ -60,6 +76,17 @@ border:1px solid red;
        margin-bottom: 15%;   
        padding: 10px; 
     }
+    @media screen and (max-width:400px){
+       
+        height: auto;
+        /* text-align: center; */
+        display: flex;
+        flex-direction:column;
+        /* height: 50vh; */
+        margin: 0px;
+
+    }
+
 }
 
 /* .footer1 :hover{
@@ -83,6 +110,15 @@ border:1px solid red;
    @media screen and (max-width:350px){
     width: 100%;
  
+}
+@media screen and (max-width:400px){
+    margin-top: 0%;
+    padding-bottom: 20%;
+    
+ 
+    
+
+
 }
    
 
